Fix handling of paths with or without trailing slash